# pytorch-deeplab-xception

./: .gitignore  README.md  test_classifier.cpp
gateway/cmd/: root.go  serve.go  util.go
gateway/protocol/: Makefile  gateway.pb.go  gateway.pb.gw.go  gateway.proto  gateway.swagger.json  interface.proto  segmentation.pb.go  swagger-export.go  swagger.pb.go
gateway/protocol/scripts/: includetxt.go
matching/: CMakeLists.txt  \  matching_client.cpp  matching_server.cpp  matching_server_async.cpp  template.cpp  train_classifier.cpp  warpHomography.cpp
matching/cmake_modules/: FindOpenCV.cmake
matching/include/: Bootstrap.hpp  Classifier.hpp  Matcher.hpp  all_descriptors.hpp  base.hpp  defines.hpp  general.hpp  params.hpp
matching/include/data/: VOCData.hpp
matching/notebook/: Untitled.ipynb
matching/protocol/: matching.proto
matching/src/: Base.cpp  Bootstrap.cpp  Classifier.cpp  Matcher.cpp  defines.cpp  params.cpp  precomp.hpp
matching/src/data/: VOCData.cpp  VOCDataProtected.cpp  VOCDataUtility.cpp
matching/utility/: system.cpp
segmentation/: .gitignore  create_monitoring_instance.sh  mock_client.py  mypath.py  peoplefund-dev.pem  pf-dev-seoul2.pem  replace_userdata_bash64.sh  serve.py  serve.sh  spot_fleet_config.json  train.py  train_voc.sh  user_data_script.sh
segmentation/gateway/protocol/: gateway_pb2.py  gateway_pb2_grpc.py
segmentation/protocol/: segmentation.proto  segmentation.swagger.json  segmentation_pb2.py  segmentation_pb2_grpc.py
segmentation/utils/: saver.py
